<resources>
    <string name="app_name">Practice</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_company">Company Sign Up</string>
    <string name="sign_up_student">Student Sign Up</string>
    <string name="company_name">Company Name:</string>
    <string name="student_name">Student Name:</string>
    <string name="repeat_password">Repeat Password:</string>
    <string name="gender">Gender:</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="logout">Logout</string>
    <string name="company">Company</string>
    <string name="student">Student</string>
    <string name="job">Job</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
