<layout xmlns:tools="http://schemas.android.com/tools">

    <data class="SignUpCompanyBinding"></data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.muhammad.practice.Login">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up_company"
                android:textSize="24dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    style="@style/LabelStyle"
                    android:text="@string/company_name" />

                <EditText
                    android:id="@+id/companyName"
                    style="@style/FieldStyle"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/LabelStyle"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/signUpEmail"

                    style="@style/FieldStyle"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    style="@style/LabelStyle"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/signUpPassword"
                    style="@style/FieldStyle"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    style="@style/LabelStyle"
                    android:text="@string/repeat_password" />

                <EditText
                    android:id="@+id/signUpRepeatPassword"
                    style="@style/FieldStyle"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/signUpCompanyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up_button" />
            <Button
                android:id="@+id/loginScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/login_button" />



        </LinearLayout>


    </ScrollView>
</layout>